--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
   - task: PythonScript@0
     displayName: python build
     inputs:
-      projects: '*.py'
+      projects: '**/*.py'
   - task: SonarQubeAnalyze@4
     displayName: Run Code Analysis
   - task: SonarQubePublish@4
