--- a/ASPNET4MVC5/CasaDoCodigo/CasaDoCodigo.MVC5.csproj
+++ b/ASPNET4MVC5/CasaDoCodigo/CasaDoCodigo.MVC5.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CasaDoCodigo</RootNamespace>
     <AssemblyName>CasaDoCodigo</AssemblyName>
-    <TargetFrameworkVersion>net5.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
