--- a/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
+++ b/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
@@ -1,33 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>CasaDoCodigo</RootNamespace>
-  </PropertyGroup>
+<PropertyGroup>
+<TargetFramework>net6.0</TargetFramework>
+<RootNamespace>CasaDoCodigo</RootNamespace>
+</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="middlewares.png" />
-    <None Remove="pipeline.png" />
-  </ItemGroup>
+<ItemGroup>
+<None Remove="middlewares.png" />
+<None Remove="pipeline.png" />
+</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="..\..\..\_Recursos\produtos\livros.txt" Link="wwwroot\images\produtos\livros.txt" />
-  </ItemGroup>
+<ItemGroup>
+<Content Include="......_Recursos\produtos\livros.txt" Link="wwwroot\images\produtos\livros.txt" />
+</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="5.0" />
-  </ItemGroup>
+<ItemGroup>
+<PackageReference Include="Microsoft.AspNetCore.All" Version="6.0" />
+</ItemGroup>
 
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="5.0" />
-  </ItemGroup>
+<ItemGroup>
+<DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="6.0" />
+</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\images\produtos\" />
-  </ItemGroup>
+<ItemGroup>
+<Folder Include="wwwroot\images\produtos" />
+</ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="dotnet restore" />
-  </Target>
+<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+<Exec Command="dotnet restore" />
+</Target>
 
 </Project>
