--- a/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
+++ b/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
@@ -15,7 +15,7 @@
 </ItemGroup>
 
 <ItemGroup>
-<PackageReference Include="Microsoft.AspNetCore.All" Version="6.0" />
+<PackageReference Include="Microsoft.AspNetCore.App" Version="6.0" />
 </ItemGroup>
 
 <ItemGroup>
