--- a/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
+++ b/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
@@ -19,6 +19,10 @@
 </ItemGroup>
 
 <ItemGroup>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+</ItemGroup>
+
+<ItemGroup>
 <Folder Include="wwwroot\images\produtos" />
 </ItemGroup>
 
