--- a/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
+++ b/ASPNETCore/CasaDoCodigo/CasaDoCodigo.Core.csproj
@@ -1,38 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>CasaDoCodigo</RootNamespace>
+  </PropertyGroup>
 
-<PropertyGroup>
-<TargetFramework>net6.0</TargetFramework>
-<RootNamespace>CasaDoCodigo</RootNamespace>
-</PropertyGroup>
+  <ItemGroup>
+    <None Remove="middlewares.png" />
+    <None Remove="pipeline.png" />
+  </ItemGroup>
 
-<ItemGroup>
-<None Remove="middlewares.png" />
-<None Remove="pipeline.png" />
-</ItemGroup>
+  <ItemGroup>
+    <Content Include="......_Recursos\produtos\livros.txt" Link="wwwroot\images\produtos\livros.txt" />
+  </ItemGroup>
 
-<ItemGroup>
-<Content Include="......_Recursos\produtos\livros.txt" Link="wwwroot\images\produtos\livros.txt" />
-</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="5.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="3.2.4" />
+  </ItemGroup>
 
-<ItemGroup>
-<PackageReference Include="Microsoft.AspNetCore.App" Version="6.0" />
-</ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\images\produtos" />
+  </ItemGroup>
 
-<ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
-</ItemGroup>
-
-<ItemGroup>
-  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="3.2.4" />
-</ItemGroup>
-
-<ItemGroup>
-<Folder Include="wwwroot\images\produtos" />
-</ItemGroup>
-
-<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-<Exec Command="dotnet restore" />
-</Target>
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="dotnet restore" />
+  </Target>
 
 </Project>
