Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,41 +1,25 @@
 trigger:
   branches:
     include:
-      - refs/heads/master
-
+    - refs/heads/master
+name: $(date:yyyyMMdd)$(rev:.rr)
 jobs:
-  - job: Phase_1
-    displayName: Build and analyze Python code
-    cancelTimeoutInMinutes: 1
-    pool:
-      vmImage: ubuntu-20.04
-    steps:
-      - checkout: self
-
-      - task: SonarQubePrepare@4
-        inputs:
-          SonarQube: http://sonarqube-teste-cloudhub.azurewebsites.net/
-          projectKey: ckp-teste-cloudhub
-          projectName: ckp teste cloudhub
-          projectVersion: 2023-09-10
-
-      - task: RestorePythonPackages@2
-        inputs:
-          version: 3.9
-
-      - task: BuildPython@2
-        inputs:
-          script: main.py
-
-      - task: SonarQubeAnalyze@4
-        inputs:
-          sonarcloud: sonarcloud.io
-          organization: https://dev.azure.com/RM92952/
-
-      - task: SonarQubePublish@4
-        inputs:
-          sonarcloud: sonarcloud.io
-          organization: https://dev.azure.com/RM92952/
-          qualityGates:
-            - gateId: "SonarQube Quality Gate"
-              status: "OK"
+- job: Phase_1
+  displayName: Build Push Image
+  cancelTimeoutInMinutes: 1
+  pool:
+    vmImage: ubuntu-20.04
+  steps:
+  - checkout: self
+  - task: SonarQubePrepare@4
+    displayName: Prepare analysis on SonarQube
+    inputs:
+      SonarQube: teste
+      projectKey: ckp-teste-cloudhub
+      projectName: ckp teste cloudhub
+  - task: RestorePythonPackages@2
+    displayName: Restore Python packages
+  - task: SonarQubeAnalyze@4
+    displayName: Run Code Analysis
+  - task: SonarQubePublish@4
+    displayName: Publish Quality Gate Result
