Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
       SonarQube: teste
       projectKey: ckp-teste-cloudhub
       projectName: ckp teste cloudhub
-  - task: RestorePythonPackages@2
+  - task: UniversalPackages@0
     displayName: Restore Python packages
   - task: SonarQubeAnalyze@4
     displayName: Run Code Analysis
